feat: CropVariety 전체 조회 기능 구현